[tool.poetry]
name = "krb5"
version = "0.1.0"
description = "KRB5 API exposed through Python"
authors = ["Jordan Borean <jborean93@gmail.com>"]
license = "MIT"
keywords = ["krb5", "kerberos"]
readme = "README.md"
homepage = "https://github.com/jborean93/pykrb5"
include = [
    "CHANGELOG.md",
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
Cython = "^0.29.24"
black = "^21.6b0"
pytest = "*"
pytest-cov = "*"
tox = "*"
mypy = "*"
isort = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "tests/|docs/"
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
