[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
# mypy doesn't seem to like pyenv and extra typeshed libraries
exclude = "setup.py"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/stubs"
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--import-mode=importlib"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = sanity,py36,py37,py38,py39,py310
skip_missing_interpreters = true
isolated_build = True

[testenv]
deps =
    -r{toxinidir}/requirements-dev.txt

commands =
    python -m pytest -v

[testenv:sanity]
commands =
    python -m black . --check
    python -m isort . --check-only
    python -m mypy .
"""
