[build-system]
requires = [
    "Cython >= 0.29.29, < 3.0.0",  # 0.29.29 includes fixes for Python 3.11
    "setuptools >= 61.0.0",  # Support for setuptools config in pyproject.toml
]
build-backend = "setuptools.build_meta"

[project]
name = "krb5"
version = "0.4.1"
description = "Kerberos API bindings for Python"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    { name = "Jordan Borean", email = "jborean93@gmail.com" }
]
keywords = ["krb5", "kerberos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
homepage = "https://github.com/jborean93/pykrb5"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
krb5 = ["py.typed", "*.pyi"]

[tool.setuptools.exclude-package-data]
krb5 = ["*.pxd", "*.pyx"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
# mypy doesn't seem to like pyenv and extra typeshed libraries
exclude = "setup.py"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/stubs"
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--import-mode=importlib"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = sanity,py36,py37,py38,py39,py310
skip_missing_interpreters = true
isolated_build = True

[testenv]
deps =
    -r{toxinidir}/requirements-dev.txt

commands =
    python -m pytest -v

[testenv:sanity]
commands =
    python -m black . --check
    python -m isort . --check-only
    python -m mypy .
"""
