[metadata]
name = krb5
version = 0.7.0.post51
url = https://github.com/jborean93/pykrb5
author = Jordan Borean
author_email = jborean93@gmail.com
license = MIT
license_files = LICENSE
description = Kerberos API bindings for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    krb5
    kerberos
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

[options.package_data]
krb5 =
    py.typed
    *.pyi

[options.exclude_package_data]
krb5 =
    *.pxd
    *.pyx
    *.h
